# givemelyrics

./: .travis.yml  README.md  meson.build
data/: Application.css  com.github.muriloventuroso.givemelyrics.appdata.xml.in  com.github.muriloventuroso.givemelyrics.desktop.in  com.github.muriloventuroso.givemelyrics.gresource.xml  com.github.muriloventuroso.givemelyrics.gschema.xml  meson.build
debian/: changelog  control  copyright  rules
po/: POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  com.github.muriloventuroso.givemelyrics.pot  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  (+157 more)
po/extra/: POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  el.po  (+156 more)
src/: Application.vala  Lyric.vala  MainWindow.vala
src/Services/: LyricsFetcher.vala  MprisClient.vala  Settings.vala
src/Widgets/: LyricsWidget.vala  Preferences.vala
